--- a/App.xaml
+++ b/App.xaml
@@ -6,6 +6,31 @@
     StartupUri="MainWindow.xaml"
     >
     <Application.Resources>
-         
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="LineHeight" Value="22"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="TextAlignment" Value="Justify"/>
+        </Style>
+        <Style
+            TargetType="TextBlock"
+            x:Key="Spec"
+            BasedOn="{StaticResource {x:Type TextBlock}}"
+            >
+            <Setter Property="Foreground" Value="Blue"/>
+        </Style>
+
+        <Style
+            TargetType="Border"
+            >
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="BorderBrush" Value="Aqua"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
     </Application.Resources>
 </Application>
