--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,7 @@
     Title="Przykładowa Aplikacja"
     Height="550"
     Width="450"
+    FontSize="16"
     >
     <Grid>
         <Grid.RowDefinitions>
@@ -25,6 +26,13 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <ScrollViewer>
+            <ScrollViewer.Resources>
+                <Style
+                    TargetType="Border"
+                    BasedOn="{StaticResource {x:Type Border}}">
+                    <Setter Property="BorderBrush" Value="Beige"/>
+                </Style>
+            </ScrollViewer.Resources>
             <StackPanel Background="#FFE6E0E0">
                 <Border Background="Red" MinHeight="50"/>
                 <Border Background="Green" MinHeight="50"/>
@@ -53,31 +61,26 @@
             Background="#FFF9E7E7"
             HorizontalContentAlignment="Center"
             VerticalContentAlignment="Center"
-            FontSize="24"
             >
             Label
         </Label>
         <Button
             Grid.Column="2"
             Grid.Row="2"
-            FontSize="24"
             >
             Button
         </Button>
         <TextBlock
             Grid.Row="4"
-            TextWrapping="Wrap"
-            FontSize="16"
-            LineHeight="21" 
-            TextAlignment="Justify"
+            Style="{StaticResource Spec}"
             >
             Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy 
         </TextBlock>
-        <TextBox
-            Grid.Column="2"
+        <TextBlock
             Grid.Row="4"
-            TextWrapping="Wrap" FontSize="16">
-            TextBox
-        </TextBox>
+            Grid.Column="2"
+            >
+            Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy 
+        </TextBlock>
     </Grid>
 </Window>
