--- a/App.xaml
+++ b/App.xaml
@@ -7,6 +7,10 @@
     >
     <Application.Resources>
         <SolidColorBrush x:Key="KolorTekstu" Color="#FF8831DE"/>
+        <LinearGradientBrush x:Key="GradientCzerwonoBiały" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FFC78383"/>
+            <GradientStop Color="White" Offset="1"/>
+        </LinearGradientBrush>
 
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="24"/>
@@ -34,5 +38,37 @@
             <Setter Property="BorderBrush" Value="Aqua"/>
             <Setter Property="Margin" Value="5"/>
         </Style>
+        
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFDDFDBE"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF9CB13C"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFF6E6C4"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF8B712C"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <ControlTemplate x:Key="NaszPrzycisk" TargetType="{x:Type ButtonBase}">
+            <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="Button.IsDefaulted" Value="true">
+                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="true">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="false">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        
     </Application.Resources>
 </Application>
