--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,6 +14,13 @@
     >
     <Window.Resources>
         <SolidColorBrush x:Key="KolorTekstu" Color="#FF31DE88"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFECBEFD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF863CB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFF6C4D4"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF8B2C60"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -60,10 +67,13 @@
             <Border Background="White" Height="50" Width="50"/>
         </WrapPanel>
         <Label
+            Template="{DynamicResource NaszaEtykieta}"
             Background="{DynamicResource GradientCzerwonoBiały}"
             Grid.Row="2"
             HorizontalContentAlignment="Center"
             VerticalContentAlignment="Center"
+            BorderBrush="#FF131313"
+            BorderThickness="3"
             >
             Label
         </Label>
