--- a/App.xaml
+++ b/App.xaml
@@ -6,46 +6,28 @@
     StartupUri="MainWindow.xaml"
     >
     <Application.Resources>
-        <SolidColorBrush x:Key="KolorTekstu" Color="#FF8831DE"/>
-        <LinearGradientBrush x:Key="GradientCzerwonoBiały" EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FFC78383"/>
-            <GradientStop Color="White" Offset="1"/>
-        </LinearGradientBrush>
+
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#99D"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color=" #99F"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#DDF"/>
+        <SolidColorBrush x:Key="DifferentButton.Disabled.Background" Color="#EEE"/>
+        <SolidColorBrush x:Key="Label.Background" Color="LightBlue"/>
+        <SolidColorBrush x:Key="DifferentLabel.Foreground" Color="#900"/>
 
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="24"/>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="FontSize" Value="24"/>
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="LineHeight" Value="22"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
-            <Setter Property="TextAlignment" Value="Justify"/>
-        </Style>
-        <Style
-            TargetType="TextBlock"
-            x:Key="Spec"
-            BasedOn="{StaticResource {x:Type TextBlock}}"
-            >
-            <Setter Property="Foreground" Value="{DynamicResource KolorTekstu}"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Background" Value="{DynamicResource Label.Background}"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="30,10"/>
         </Style>
 
-        <Style
-            TargetType="Border"
-            >
-            <Setter Property="BorderThickness" Value="3"/>
-            <Setter Property="BorderBrush" Value="Aqua"/>
-            <Setter Property="Margin" Value="5"/>
+        <Style x:Key="LabelStyle" TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+            <Setter Property="Foreground" Value="{DynamicResource DifferentLabel.Foreground}"/>
         </Style>
-        
-        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFDDFDBE"/>
-        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF9CB13C"/>
-        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFF6E6C4"/>
-        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF8B712C"/>
-        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
-        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
-        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+
         <ControlTemplate
             x:Key="NaszPrzycisk"
             TargetType="{x:Type ButtonBase}"
@@ -53,9 +35,7 @@
             <Border
                 x:Name="border"
                 Background="{TemplateBinding Background}"
-                BorderThickness="{TemplateBinding BorderThickness}"
-                BorderBrush="{TemplateBinding BorderBrush}"
-                SnapsToDevicePixels="true"
+                Margin="5"
                 >
                 <ContentPresenter
                     x:Name="contentPresenter"
@@ -68,56 +48,15 @@
                     />
             </Border>
             <ControlTemplate.Triggers>
-                <Trigger Property="Button.IsDefaulted" Value="true">
-                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-                </Trigger>
                 <Trigger Property="IsMouseOver" Value="true">
                     <Setter Property="Background" TargetName="border" Value="{DynamicResource Button.MouseOver.Background}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource Button.MouseOver.Border}"/>
                 </Trigger>
                 <Trigger Property="IsPressed" Value="true">
-                    <Setter Property="Background" TargetName="border" Value="{DynamicResource Button.Pressed.Background}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource Button.Pressed.Border}"/>
+                     <Setter Property="Background" TargetName="border" Value="{DynamicResource Button.Pressed.Background}"/>
                 </Trigger>
-                <Trigger Property="IsEnabled" Value="false">
-                    <Setter Property="Background" TargetName="border" Value="{DynamicResource Button.Disabled.Background}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource Button.Disabled.Border}"/>
-                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
-                </Trigger>
-            </ControlTemplate.Triggers>
+             </ControlTemplate.Triggers>
         </ControlTemplate>
-
-        <ControlTemplate
-            x:Key="NaszaEtykieta"
-            TargetType="{x:Type Label}"
-            >
-            <Border
-                Background="{TemplateBinding Background}"
-                BorderThickness="{TemplateBinding BorderThickness}"
-                BorderBrush="{TemplateBinding BorderBrush}"
-                SnapsToDevicePixels="true"
-                >
-                <Border
-                    Background="{TemplateBinding Background}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    Margin="{TemplateBinding BorderThickness}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    Padding="{TemplateBinding Padding}"
-                    SnapsToDevicePixels="true"
-                    >
-                    <ContentPresenter
-                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                        RecognizesAccessKey="True"
-                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                        />
-                </Border>
-            </Border>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsEnabled" Value="false">
-                    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
+      
     </Application.Resources>
 </Application>
+
