--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="NET_ININ4_PR2._2.App"
+    x:Class="AdamPiatkowski_zadanie1.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:NET_ININ4_PR2._2"
+    xmlns:local="clr-namespace:AdamPiatkowski_zadanie1"
     StartupUri="MainWindow.xaml"
     >
     <Application.Resources>
@@ -11,21 +11,28 @@
         <SolidColorBrush x:Key="Button.Pressed.Background" Color=" #99F"/>
         <SolidColorBrush x:Key="Button.Disabled.Background" Color="#DDF"/>
         <SolidColorBrush x:Key="DifferentButton.Disabled.Background" Color="#EEE"/>
-        <SolidColorBrush x:Key="Label.Background" Color="LightBlue"/>
         <SolidColorBrush x:Key="DifferentLabel.Foreground" Color="#900"/>
+        <SolidColorBrush x:Key="Label.Background" Color="LightGreen"/>
 
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Background" Value="{DynamicResource Label.Background}"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="30,10"/>
+            <Setter Property="Padding" Value="0 10"/>
         </Style>
 
+        <Style TargetType="Button">
+            <Setter Property="Padding" Value="30,10"/>
+        </Style>
         <Style x:Key="LabelStyle" TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
             <Setter Property="Foreground" Value="{DynamicResource DifferentLabel.Foreground}"/>
+        </Style>
+
+        <Style x:Key="ButtonDifferentStyle" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Setter Property="Background" Value="{DynamicResource DifferentButton.Disabled.Background}"/>
         </Style>
 
         <ControlTemplate
