--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window
-    x:Class="NET_ININ4_PR2._2.MainWindow"
+    x:Class="AdamPiatkowski_zadanie1.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:NET_ININ4_PR2._2"
+    xmlns:local="clr-namespace:AdamPiatkowski_zadanie1"
     mc:Ignorable="d"
     
     Title="Przykładowa Aplikacja"
@@ -25,12 +25,10 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <WrapPanel
-            Grid.ColumnSpan="2"
-
-            >
+            Grid.ColumnSpan="2">
             <Button
             Template="{DynamicResource NaszPrzycisk}"
-                Background="{DynamicResource DifferentButton.Disabled.Background}">
+                Style="{StaticResource ButtonDifferentStyle}">
                 Button
             </Button>
             <Button
